@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.ebay.raptorio.platform</groupId>
     <artifactId>raptor-io-parent</artifactId>
-    <version>0.19.1-RELEASE</version>
+    <version>0.19.3-RELEASE</version>
     <relativePath></relativePath> <!-- lookup parent from repository -->
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -17,23 +17,16 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <CodeCacheSize>512m</CodeCacheSize>
     <encoding>UTF-8</encoding>
-    <scala.version>2.11.8</scala.version>
-    <scala.compat.version>2.11</scala.compat.version>
+    <ep.component.version>0.19.7-RELEASE</ep.component.version>
     <slf4j.version>1.7.7</slf4j.version>
     <log4j.version>1.2.17</log4j.version>
-    <hadoop.version>2.7.3.2.6.4.2.0.28</hadoop.version>
-    <spark.version>2.4.7</spark.version>
     <avro.version>1.11.0</avro.version>
-    <parquet.version>1.10.1</parquet.version>
     <curator.version>4.3.0</curator.version>
     <couchbase.client.version>2.7.11</couchbase.client.version>
     <dukes.version>1.6.26.raptorio</dukes.version>
     <rheos.version>2.0.11</rheos.version>
     <kafka.version>2.0.1</kafka.version>
-    <metrics.version>1.2.6-RELEASE</metrics.version>
     <jackson.version>2.9.7</jackson.version>
-    <powermock.version>1.6.6</powermock.version>
-
     <scoverage.plugin.version>1.3.0</scoverage.plugin.version>
 
     <sonar.scoverage.reportPath>target/scoverage.xml</sonar.scoverage.reportPath>
@@ -181,6 +174,10 @@
       <groupId>com.ebay.standards</groupId>
       <artifactId>standards-exception-starter</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.ebay.raptorio.component</groupId>
+      <artifactId>raptor-cloud-metrics-starter</artifactId>
+    </dependency>
 
     <!--global config-->
     <dependency>
@@ -283,7 +280,7 @@
     <dependency>
       <groupId>com.ebay.traffic</groupId>
       <artifactId>chocolate-kafkacommon</artifactId>
-      <version>3.9.1-RELEASE</version>
+      <version>3.9.2-RELEASE</version>
       <exclusions>
         <exclusion>
           <groupId>org.slf4j</groupId>
@@ -295,7 +292,7 @@
     <dependency>
       <groupId>com.ebay.traffic</groupId>
       <artifactId>chocolate-common</artifactId>
-      <version>3.9.1-RELEASE</version>
+      <version>3.9.2-RELEASE</version>
       <exclusions>
         <exclusion>
           <groupId>org.slf4j</groupId>
@@ -305,26 +302,20 @@
     </dependency>
 
     <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13.2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-      <version>1.10.19</version>
+      <version>4.5.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.couchbase.client</groupId>
       <artifactId>java-client</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.powermock</groupId>
-      <artifactId>powermock-module-junit4</artifactId>
-      <version>${powermock.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.powermock</groupId>
-      <artifactId>powermock-api-mockito</artifactId>
-      <version>${powermock.version}</version>
-      <scope>test</scope>
     </dependency>
 
     <dependency>
@@ -354,7 +345,7 @@
     <dependency>
       <groupId>com.ebay.traffic</groupId>
       <artifactId>chocolate-kafkacommon</artifactId>
-      <version>3.8.0-RELEASE</version>
+      <version>3.9.2-RELEASE</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
@@ -605,9 +596,15 @@
     </dependency>
 
     <dependency>
-      <groupId>com.ebay.traffic</groupId>
-      <artifactId>metrics-common</artifactId>
-      <version>${metrics.version}</version>
+      <groupId>com.ebay.raptor.dfp</groupId>
+      <artifactId>DeviceFingerprintSvcClient</artifactId>
+      <version>1.0.12</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>ConfigWeb</artifactId>
+          <groupId>com.ebay.raptor.core</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
@@ -640,6 +637,16 @@
       <plugin>
         <groupId>com.spotify</groupId>
         <artifactId>docker-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <forkMode>once</forkMode>
+          <forkCount>1.0C</forkCount>
+          <reuseForks>false</reuseForks>
+          <argLine>-Xverify:none -Xmx1024m ${surefireArgLine}</argLine>
+        </configuration>
       </plugin>
 
 <!--      <plugin>-->
